--- a/index.html
+++ b/index.html
@@ -235,6 +235,7 @@
       </section>
     </main>
     <footer class="footer">
+      <div class="footer-block">
       <div class="footer-container">
         <a href="./index.html" class="logo logo-footer"
           >Web<span class="accent">Studio</span></a
@@ -244,6 +245,7 @@
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
+      </div>
       </div>
     </footer>
   </body>
