--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </head>
   <body>
     <header class="header">
-      <div class="container">
+      <nav class="container">
         <a href="./index.html" class="logo"
           >Web<span class="accent">Studio</span></a
         >
@@ -42,22 +42,21 @@
             <a class="header-menu-link" href="">Contacts</a>
           </li>
         </ul>
-        <!-- </nav> -->
-        <!-- <address class="header-address"> -->
-        <ul class="header-address-list">
-          <li class="header-address-item">
-            <a class="header-address-link" href="info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="header-address-item">
-            <a class="header-address-link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-        <!-- </address> -->
-      </div>
+      </nav>
+      <!-- <address class="header-address"> -->
+      <ul class="header-address-list">
+        <li class="header-address-item">
+          <a class="header-address-link" href="info@devstudio.com"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li class="header-address-item">
+          <a class="header-address-link" href="tel:+110001111111"
+            >+11 (000) 111-11-11</a
+          >
+        </li>
+      </ul>
+      <!-- </address> -->
     </header>
     <main>
       <section class="section-hero">
