--- a/index.html
+++ b/index.html
@@ -26,36 +26,38 @@
   </head>
   <body>
     <header class="header">
-      <nav class="container">
-        <a href="./index.html" class="logo"
-          >Web<span class="accent">Studio</span></a
-        >
+      <div class="header-block">
+        <nav class="container">
+          <a href="./index.html" class="logo"
+            >Web<span class="accent">Studio</span></a
+          >
 
-        <ul class="header-menu-list">
-          <li class="header-menu-item">
-            <a class="header-menu-link" href="./index.html">Studio</a>
+          <ul class="header-menu-list">
+            <li class="header-menu-item">
+              <a class="header-menu-link" href="./index.html">Studio</a>
+            </li>
+            <li class="header-menu-item">
+              <a class="header-menu-link" href="">Portfolio</a>
+            </li>
+            <li class="header-menu-item">
+              <a class="header-menu-link" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <!-- <address class="header-address"> -->
+        <ul class="header-address-list">
+          <li class="header-address-item">
+            <a class="header-address-link" href="info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
-          <li class="header-menu-item">
-            <a class="header-menu-link" href="">Portfolio</a>
-          </li>
-          <li class="header-menu-item">
-            <a class="header-menu-link" href="">Contacts</a>
+          <li class="header-address-item">
+            <a class="header-address-link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
-      </nav>
-      <!-- <address class="header-address"> -->
-      <ul class="header-address-list">
-        <li class="header-address-item">
-          <a class="header-address-link" href="info@devstudio.com"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li class="header-address-item">
-          <a class="header-address-link" href="tel:+110001111111"
-            >+11 (000) 111-11-11</a
-          >
-        </li>
-      </ul>
+      </div>
       <!-- </address> -->
     </header>
     <main>
