--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </li>
           </ul>
         </nav>
-        <!-- <address class="header-address"> -->
+        <address class="header-address">
         <ul class="header-address-list">
           <li class="header-address-item">
             <a class="header-address-link" href="info@devstudio.com"
@@ -58,18 +58,19 @@
           </li>
         </ul>
       </div>
-      <!-- </address> -->
+      </address>
     </header>
     <main>
       <section class="section-hero">
-        <div class="hero">
+        <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button class="hero-btn" type="button">Order Service</button>
         </div>
       </section>
       <section class="section-about-us">
-        <h2 hidden>About Us</h2>
-        <ul class="about-us-list container">
+        <div class="container">
+        <h2 class="visually-hidden">About Us</h2>
+        <ul class="about-us-list">
           <li class="about-us-item">
             <h3 class="about-us-title">Strategy</h3>
             <p class="about-us-text">
@@ -99,9 +100,11 @@
             </p>
           </li>
         </ul>
+        </div>
       </section>
 
       <section class="section-our-team">
+        <div class="container">
         <h2 class="our-team-title">Our Team</h2>
         <ul class="our-team-list">
           <li class="our-team-item">
@@ -154,8 +157,10 @@
             </div>
           </li>
         </ul>
+        </div>
       </section>
       <section class="section-portfolio">
+        <div class="container">
         <h2 class="portfolio-title">Our Portfolio</h2>
         <ul class="portfolio-list container">
           <li class="portfolio-item">
@@ -232,10 +237,11 @@
             </div>
           </li>
         </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
-      <div class="footer-block">
+      <div class="container">
         <div class="footer-container">
           <a href="./index.html" class="logo logo-footer"
             >Web<span class="accent">Studio</span></a
