--- a/index.html
+++ b/index.html
@@ -45,20 +45,20 @@
           </ul>
         </nav>
         <address class="header-address">
-        <ul class="header-address-list">
-          <li class="header-address-item">
-            <a class="header-address-link" href="info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="header-address-item">
-            <a class="header-address-link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
+          <ul class="header-address-list">
+            <li class="header-address-item">
+              <a class="header-address-link" href="info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="header-address-item">
+              <a class="header-address-link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
       </div>
-      </address>
     </header>
     <main>
       <section class="section-hero">
@@ -69,174 +69,174 @@
       </section>
       <section class="section-about-us">
         <div class="container">
-        <h2 class="visually-hidden">About Us</h2>
-        <ul class="about-us-list">
-          <li class="about-us-item">
-            <h3 class="about-us-title">Strategy</h3>
-            <p class="about-us-text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li class="about-us-item">
-            <h3 class="about-us-title">Punctuality</h3>
-            <p class="about-us-text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li class="about-us-item">
-            <h3 class="about-us-title">Diligence</h3>
-            <p class="about-us-text">
-              Research and confirm brands with the strongest digital growth
-              opportunities and minimize risk.
-            </p>
-          </li>
-          <li class="about-us-item">
-            <h3 class="about-us-title">Technologies</h3>
-            <p class="about-us-text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+          <h2 class="visually-hidden">About Us</h2>
+          <ul class="about-us-list">
+            <li class="about-us-item">
+              <h3 class="about-us-title">Strategy</h3>
+              <p class="about-us-text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="about-us-item">
+              <h3 class="about-us-title">Punctuality</h3>
+              <p class="about-us-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="about-us-item">
+              <h3 class="about-us-title">Diligence</h3>
+              <p class="about-us-text">
+                Research and confirm brands with the strongest digital growth
+                opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="about-us-item">
+              <h3 class="about-us-title">Technologies</h3>
+              <p class="about-us-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
         </div>
       </section>
 
       <section class="section-our-team">
         <div class="container">
-        <h2 class="our-team-title">Our Team</h2>
-        <ul class="our-team-list">
-          <li class="our-team-item">
-            <img
-              class="our-team-image"
-              src="./images/img-left.jpg"
-              alt="beard_guy"
-              width="264"
-            />
-            <div class="team-info">
-              <h3 class="our-team-subtitle">Mark Guerrero</h3>
-              <p class="our-team-text">Product Designer</p>
-            </div>
-          </li>
-          <li class="our-team-item">
-            <img
-              class="our-team-image"
-              src="./images/img-2.jpg"
-              alt="big_smile_guy"
-              width="264"
-            />
-            <div class="team-info">
-              <h3 class="our-team-subtitle">Tom Ford</h3>
-              <p class="our-team-text">Frontend Developer</p>
-            </div>
-          </li>
-          <li class="our-team-item">
-            <img
-              class="our-team-image"
-              src="./images/img-girl.jpg"
-              alt="girl_in_pink"
-              width="264"
-            />
-            <div class="team-info">
-              <h3 class="our-team-subtitle">Camila Garcia</h3>
-              <p class="our-team-text">Marketing</p>
-            </div>
-          </li>
+          <h2 class="our-team-title">Our Team</h2>
+          <ul class="our-team-list">
+            <li class="our-team-item">
+              <img
+                class="our-team-image"
+                src="./images/img-left.jpg"
+                alt="beard_guy"
+                width="264"
+              />
+              <div class="team-info">
+                <h3 class="our-team-subtitle">Mark Guerrero</h3>
+                <p class="our-team-text">Product Designer</p>
+              </div>
+            </li>
+            <li class="our-team-item">
+              <img
+                class="our-team-image"
+                src="./images/img-2.jpg"
+                alt="big_smile_guy"
+                width="264"
+              />
+              <div class="team-info">
+                <h3 class="our-team-subtitle">Tom Ford</h3>
+                <p class="our-team-text">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="our-team-item">
+              <img
+                class="our-team-image"
+                src="./images/img-girl.jpg"
+                alt="girl_in_pink"
+                width="264"
+              />
+              <div class="team-info">
+                <h3 class="our-team-subtitle">Camila Garcia</h3>
+                <p class="our-team-text">Marketing</p>
+              </div>
+            </li>
 
-          <li class="our-team-item">
-            <img
-              class="our-team-image"
-              src="./images/img-right.jpg"
-              alt="gray-t-shirt-guy"
-              width="264"
-            />
-            <div class="team-info">
-              <h3 class="our-team-subtitle">Daniel Wilson</h3>
-              <p class="our-team-text">UI Designer</p>
-            </div>
-          </li>
-        </ul>
+            <li class="our-team-item">
+              <img
+                class="our-team-image"
+                src="./images/img-right.jpg"
+                alt="gray-t-shirt-guy"
+                width="264"
+              />
+              <div class="team-info">
+                <h3 class="our-team-subtitle">Daniel Wilson</h3>
+                <p class="our-team-text">UI Designer</p>
+              </div>
+            </li>
+          </ul>
         </div>
       </section>
       <section class="section-portfolio">
         <div class="container">
-        <h2 class="portfolio-title">Our Portfolio</h2>
-        <ul class="portfolio-list container">
-          <li class="portfolio-item">
-            <img
-              class="portfolio-image"
-              src="./images/1.jpg"
-              alt="portfolio-image"
-              width="360"
-            />
-            <div class="portfolio-info">
-              <h3 class="portfolio-subtitle">Banking App</h3>
-              <p class="portfolio-text">App</p>
-            </div>
-          </li>
-          <li class="portfolio-item">
-            <img
-              class="portfolio-image"
-              src="./images/2.jpg"
-              alt="banking-app"
-              width="360"
-            />
-            <div class="portfolio-info">
-              <h3 class="portfolio-subtitle">Cashless Payment</h3>
-              <p class="portfolio-text">Marketing</p>
-            </div>
-          </li>
-          <li class="portfolio-item">
-            <img
-              class="portfolio-image"
-              src="./images/3.jpg"
-              alt="cashless-payment"
-              width="360"
-            />
-            <div class="portfolio-info">
-              <h3 class="portfolio-subtitle">Meditation App</h3>
-              <p class="portfolio-text">App</p>
-            </div>
-          </li>
+          <h2 class="portfolio-title">Our Portfolio</h2>
+          <ul class="portfolio-list container">
+            <li class="portfolio-item">
+              <img
+                class="portfolio-image"
+                src="./images/1.jpg"
+                alt="portfolio-image"
+                width="360"
+              />
+              <div class="portfolio-info">
+                <h3 class="portfolio-subtitle">Banking App</h3>
+                <p class="portfolio-text">App</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                class="portfolio-image"
+                src="./images/2.jpg"
+                alt="banking-app"
+                width="360"
+              />
+              <div class="portfolio-info">
+                <h3 class="portfolio-subtitle">Cashless Payment</h3>
+                <p class="portfolio-text">Marketing</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                class="portfolio-image"
+                src="./images/3.jpg"
+                alt="cashless-payment"
+                width="360"
+              />
+              <div class="portfolio-info">
+                <h3 class="portfolio-subtitle">Meditation App</h3>
+                <p class="portfolio-text">App</p>
+              </div>
+            </li>
 
-          <li class="portfolio-item">
-            <img
-              class="portfolio-image"
-              src="./images/4.jpg"
-              alt="meditation"
-              width="360"
-            />
-            <div class="portfolio-info">
-              <h3 class="portfolio-subtitle">Taxi Service</h3>
-              <p class="portfolio-text">Marketing</p>
-            </div>
-          </li>
-          <li class="portfolio-item">
-            <img
-              class="portfolio-image"
-              src="./images/5.jpg"
-              alt="taxi"
-              width="360"
-            />
-            <div class="portfolio-info">
-              <h3 class="portfolio-subtitle">Screen Illustrations</h3>
-              <p class="portfolio-text">Design</p>
-            </div>
-          </li>
-          <li class="portfolio-item">
-            <img
-              class="portfolio-image"
-              src="./images/6.jpg"
-              alt="screen-illustrations"
-              width="360"
-            />
-            <div class="portfolio-info">
-              <h3 class="portfolio-subtitle">Online Courses</h3>
-              <p class="portfolio-text">Marketing</p>
-            </div>
-          </li>
-        </ul>
+            <li class="portfolio-item">
+              <img
+                class="portfolio-image"
+                src="./images/4.jpg"
+                alt="meditation"
+                width="360"
+              />
+              <div class="portfolio-info">
+                <h3 class="portfolio-subtitle">Taxi Service</h3>
+                <p class="portfolio-text">Marketing</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                class="portfolio-image"
+                src="./images/5.jpg"
+                alt="taxi"
+                width="360"
+              />
+              <div class="portfolio-info">
+                <h3 class="portfolio-subtitle">Screen Illustrations</h3>
+                <p class="portfolio-text">Design</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                class="portfolio-image"
+                src="./images/6.jpg"
+                alt="screen-illustrations"
+                width="360"
+              />
+              <div class="portfolio-info">
+                <h3 class="portfolio-subtitle">Online Courses</h3>
+                <p class="portfolio-text">Marketing</p>
+              </div>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
