--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </head>
   <body>
     <header class="header">
-      <div class="header-block">
+      <div class="container">
         <nav class="container">
           <a href="./index.html" class="logo"
             >Web<span class="accent">Studio</span></a
