--- a/index.html
+++ b/index.html
@@ -107,59 +107,59 @@
       <section class="section-our-team">
         <div class="container">
           <h2 class="our-team-title">Our Team</h2>
-          <div class="our-team-container">
-            <ul class="our-team-list">
-              <li class="our-team-item">
-                <img
-                  class="our-team-image"
-                  src="./images/img-left.jpg"
-                  alt="beard_guy"
-                  width="264"
-                />
-                <div class="team-info">
-                  <h3 class="our-team-subtitle">Mark Guerrero</h3>
-                  <p class="our-team-text">Product Designer</p>
-                </div>
-              </li>
-              <li class="our-team-item">
-                <img
-                  class="our-team-image"
-                  src="./images/img-2.jpg"
-                  alt="big_smile_guy"
-                  width="264"
-                />
-                <div class="team-info">
-                  <h3 class="our-team-subtitle">Tom Ford</h3>
-                  <p class="our-team-text">Frontend Developer</p>
-                </div>
-              </li>
-              <li class="our-team-item">
-                <img
-                  class="our-team-image"
-                  src="./images/img-girl.jpg"
-                  alt="girl_in_pink"
-                  width="264"
-                />
-                <div class="team-info">
-                  <h3 class="our-team-subtitle">Camila Garcia</h3>
-                  <p class="our-team-text">Marketing</p>
-                </div>
-              </li>
+          <!-- <div class="our-team-container"> -->
+          <ul class="our-team-list">
+            <li class="our-team-item">
+              <img
+                class="our-team-image"
+                src="./images/img-left.jpg"
+                alt="beard_guy"
+                width="264"
+              />
+              <div class="team-info">
+                <h3 class="our-team-subtitle">Mark Guerrero</h3>
+                <p class="our-team-text">Product Designer</p>
+              </div>
+            </li>
+            <li class="our-team-item">
+              <img
+                class="our-team-image"
+                src="./images/img-2.jpg"
+                alt="big_smile_guy"
+                width="264"
+              />
+              <div class="team-info">
+                <h3 class="our-team-subtitle">Tom Ford</h3>
+                <p class="our-team-text">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="our-team-item">
+              <img
+                class="our-team-image"
+                src="./images/img-girl.jpg"
+                alt="girl_in_pink"
+                width="264"
+              />
+              <div class="team-info">
+                <h3 class="our-team-subtitle">Camila Garcia</h3>
+                <p class="our-team-text">Marketing</p>
+              </div>
+            </li>
 
-              <li class="our-team-item">
-                <img
-                  class="our-team-image"
-                  src="./images/img-right.jpg"
-                  alt="gray-t-shirt-guy"
-                  width="264"
-                />
-                <div class="team-info">
-                  <h3 class="our-team-subtitle">Daniel Wilson</h3>
-                  <p class="our-team-text">UI Designer</p>
-                </div>
-              </li>
-            </ul>
-          </div>
+            <li class="our-team-item">
+              <img
+                class="our-team-image"
+                src="./images/img-right.jpg"
+                alt="gray-t-shirt-guy"
+                width="264"
+              />
+              <div class="team-info">
+                <h3 class="our-team-subtitle">Daniel Wilson</h3>
+                <p class="our-team-text">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+          <!-- </div> -->
         </div>
       </section>
       <section class="section-portfolio">
