--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
       <section class="section-portfolio">
         <div class="container">
           <h2 class="portfolio-title">Our Portfolio</h2>
-          <ul class="portfolio-list container">
+          <ul class="portfolio-list">
             <li class="portfolio-item">
               <img
                 class="portfolio-image"
