--- a/index.html
+++ b/index.html
@@ -245,17 +245,17 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <div class="footer-container">
-          <a href="./index.html" class="logo logo-footer"
-            >Web<span class="accent">Studio</span></a
-          >
+        <!-- <div class="footer-container"> -->
+        <a href="./index.html" class="logo logo-footer"
+          >Web<span class="accent">Studio</span></a
+        >
 
-          <p class="footer-text">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
-        </div>
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
       </div>
+      <!-- </div> -->
     </footer>
   </body>
 </html>
